de-Guavification, de-parallalelization