@@ -1,7 +1,5 @@
 package lyrics.songs;
 
-import com.google.common.collect.ImmutableList;
-
 import javax.annotation.Nonnull;
 import java.util.List;
 
@@ -12,7 +10,7 @@ import java.util.List;
 public class SongPattern
 {
     public static final SongPattern ORGAN_4 = new SongPattern(
-        ImmutableList.of(
+        List.of(
             StanzaPattern.ORGAN_4_VERSE,
             StanzaPattern.ORGAN_4_VERSE,
             StanzaPattern.ORGAN_4_CHORUS,
@@ -21,7 +19,7 @@ public class SongPattern
         4
     );
     public static final SongPattern F5 = new SongPattern(
-        ImmutableList.of(
+        List.of(
             StanzaPattern.F5
         ),
         4
@@ -33,13 +31,13 @@ public class SongPattern
 
     public SongPattern(@Nonnull List<StanzaPattern> stanzaPatterns, int numVerses)
     {
-        m_stanzaPatterns = ImmutableList.copyOf(stanzaPatterns);
+        m_stanzaPatterns = List.copyOf(stanzaPatterns);
         m_numVerses = numVerses;
     }
 
     public SongPattern(@Nonnull StanzaPattern stanzaPattern, int numVerses)
     {
-        m_stanzaPatterns = ImmutableList.of(stanzaPattern);
+        m_stanzaPatterns = List.of(stanzaPattern);
         m_numVerses = numVerses;
     }
 
